--- a/qt-core/package.json
+++ b/qt-core/package.json
@@ -221,6 +221,7 @@
     "@eslint/js": "^9.21.0",
     "@types/command-exists": "^1.2.3",
     "@types/lodash": "^4.17.12",
+    "@types/lokijs": "^1.5.14",
     "@types/node": "^20.17.0",
     "@types/vscode": "^1.94.0",
     "@types/which": "^3.0.4",
@@ -239,6 +240,7 @@
     "command-exists": "^1.2.9",
     "dotenv": "^16.5.0",
     "lodash": "^4.17.21",
+    "lokijs": "^1.5.12",
     "module-alias": "^2.2.3",
     "qt-lib": "file:../qt-lib",
     "typescript": "^5.6.3",
