--- a/qt-core/package.json
+++ b/qt-core/package.json
@@ -220,9 +220,11 @@
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
     "@types/command-exists": "^1.2.3",
+    "@types/jimp": "^0.2.1",
     "@types/lodash": "^4.17.12",
     "@types/lokijs": "^1.5.14",
     "@types/node": "^20.17.0",
+    "@types/pngjs": "^6.0.5",
     "@types/vscode": "^1.94.0",
     "@types/which": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -239,9 +241,11 @@
     "axios": "^1.9.0",
     "command-exists": "^1.2.9",
     "dotenv": "^16.5.0",
+    "jimp": "^1.6.0",
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "module-alias": "^2.2.3",
+    "pngjs": "^7.0.0",
     "qt-lib": "file:../qt-lib",
     "typescript": "^5.6.3",
     "which": "^5.0.0"
