--- a/qt-core/tsconfig.json
+++ b/qt-core/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
+    "module": "node16",
+    "moduleResolution": "node16",
     "target": "ES2020",
     "types": ["node"],
     "outDir": "out",
